--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<title>Smells Like Bakin' Cupcake Company</title>
+	<title>COMPANY</title>
 	<link rel="stylesheet" href="css/normalize.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
@@ -35,13 +35,13 @@
 		
 	
 		<div id="featured-cupcake" class="grid_7">
-			<h2>Cupcake of the Week</h2>
+			<h2>HEADER</h2>
 			<p>This week’s featured cupcake is the <a href="#">Avocado Chocolate cupcake</a>. It’s strange combo of flavors will kick your taste buds into fiesta mode!</p>
 			<img src="img/featured-cupcake.jpg" alt="Avocado Chocolate Cupcake">
 		</div>
 		
 		<div id="new-cupcakes" class="grid_5 omega">
-				<h2>Fresh Out the Oven</h2>
+				<h2>FRESH OUT OF THE OVEN</h2>
 				<p>Our newest cupcakes are <a href="#">Bacon Me Crazy</a> and <a href="#">Jalapeño So Spicy</a>. </p>
 			<img src="img/new-cupcake-bacon.jpg" alt="Bacon Me Crazy">
 			<img src="img/new-cupcake-jalapeno.jpg" alt="Spicy Lime">
@@ -51,7 +51,7 @@
 		
 			
 			<div class="grid_7">
-				<h2>Inside the Kitchen</h2>
+				<h2>KITCHEN </h2>
 				<p>Smells Like Bakin’ started out in the garage of the husband wife duo Allison &amp; Joseph. Allison is the baker, and Joseph found a way for them to make a business out of her tasty treats. Flash forward to today and they have a successful store front, catering business and cupcake truck. </p>
 				<p><a href="#" class="btn-small">Read More</a></p>
 			</div>
