--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<title>Monica Cho</title>
+	<title>Work</title>
 	<link rel="stylesheet" href="css/normalize.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
@@ -26,22 +26,21 @@
 			</ul>
 		</div>
 		
+		<div id="intro" class="grid_9">
+			
+		</div>
 		
 	
-		
 	
-		<div id="featured-art" class="grid_8 alpha">
-	
-			<img src="img/nude.jpg" alt="Life Drawing">
+		<div id="new-photo" class="grid_4">
+				
+			<img src="img/portrait.jpg" alt="art">
 			
 		</div>
 		
 		
-		
-		
-		
 			
-			<div class="grid_7">
+			<div class="grid_7 omega">
 				<h2>Artist </h2>
 				<p>Smells Like Bakin’ started out in the garage of the husband wife duo Allison &amp; Joseph. Allison is the baker, and Joseph found a way for them to make a business out of her tasty treats. Flash forward to today and they have a successful store front, catering business and cupcake truck. </p>
 				<p><a href="#" class="btn-small">Read More</a></p>
