--- a/about.html
+++ b/about.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<title>Work</title>
+	<title>About</title>
 	<link rel="stylesheet" href="css/normalize.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
-
 	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 </head>
 
@@ -25,43 +24,26 @@
 				<li class="last"><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		
-		<div id="intro" class="grid_9">
-			
-		</div>
-		
 	
 	
-		<div id="new-photo" class="grid_4">
+		<div id="about" class="grid_8">
 				
-			<img src="img/portrait.jpg" alt="art">
+			<img src="img/monicacho.jpg" alt="art">
 			
 		</div>
 		
 		
 			
-			<div class="grid_7 omega">
-				<h2>Artist </h2>
-				<p>Smells Like Bakin’ started out in the garage of the husband wife duo Allison &amp; Joseph. Allison is the baker, and Joseph found a way for them to make a business out of her tasty treats. Flash forward to today and they have a successful store front, catering business and cupcake truck. </p>
-				<p><a href="#" class="btn-small">Read More</a></p>
+			<div id="me" class="grid_7">
+				<h2>About Me </h2>
+				<p>I was born in Torrance, CA and grew up in the suburbs of Chicago. I went to school for fine art. Some of my favorite artists include John Marin, Wasily Kandinsky, John Sargent and Mark Rothko. My hobbies include painting, rock climbing, yoga, reading, hiking, and swimming. I live in Chicago with my two cats, Hawk and Radar. I work for a consulting company called Gatefeed and do freelance graphic design work in my free time.  </p>
+				
 			</div>
 			
 			
-		<div class="grid_5 omega">
-			<h2>header</h2>
-			
-			<div id="contact">
-				<p>Phone: <span>312.232.4345</span><br>
-				Email: <a href="#">info@monica-cho.com</a></p>
-			</div>
-			
-			<p>We announce all of our new flavors first through Facebook &amp; Twitter, and even take requests!</p>		
-			<a href="http://www.facebook.com/SmellsLikeBakin"><img src="img/facebook.gif" alt="Facebook"></a>
-			<a href="https://twitter.com/#!/smellslikebakin"><img src="img/twitter.gif" alt="Twitter"></a>
-		</div>
 		
-		<div id="copyright" class="grid_12">
-			<p>© 2012 Monica Cho. All Rights Reserved.</p>
+		<div id="copyright" class="grid_12 omega">
+			<p>© 2014 Monica Cho. All Rights Reserved.</p>
 		</div>
 		
 	</div>
