--- a/about.html
+++ b/about.html
@@ -19,8 +19,7 @@
 			<ul class="nav">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="work.html">Work</a></li>
-				<li><a href="about.html">About Me</a></li>
-				
+				<li><a href="about.html">About Me</a></li>		
 				<li class="last"><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
@@ -37,7 +36,7 @@
 			<div id="me" class="grid_7">
 				<h2>About Me </h2>
 				<p>I was born in Torrance, CA and grew up in the suburbs of Chicago. I went to school for fine art. Some of my favorite artists include John Marin, Wasily Kandinsky, John Sargent and Mark Rothko. My hobbies include painting, rock climbing, yoga, reading, hiking, and swimming. I live in Chicago with my two cats, Hawk and Radar. I work for a consulting company called Gatefeed and do freelance graphic design work in my free time.  </p>
-				
+				<p>My friend says I come off as serious to some people but to her I'm funny. I don't try to be funny. It's hard to point out a "quirky" thing. I'm sure I have a few quirky things about me. </p>
 			</div>
 			
 			
