--- a/about.html
+++ b/about.html
@@ -13,8 +13,10 @@
 	
 	<div class="container clearfix">
 		<div class="grid_4">
-			<img src="img/monica.gif" alt="Monica Cho">
+			<a href="index.html"><img src="img/monica.gif" alt="Monica Cho"></a>
 		</div>
+		
+		
 		<div class="grid_8 omega">
 			<ul class="nav">
 				<li><a href="index.html">Home</a></li>
@@ -23,20 +25,21 @@
 				<li class="last"><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
+	<br>
+	<div class="grid_12">
+	</div>
+	<br>
 	
-	
-		<div id="about" class="grid_8">
+		<div id="about" class="grid_6">
 				
 			<img src="img/monicacho.jpg" alt="art">
 			
 		</div>
-		
-		
 			
-			<div id="me" class="grid_7">
+			<div id="me" class="grid_6 omega">
 				<h2>About Me </h2>
-				<p>I was born in Torrance, CA and grew up in the suburbs of Chicago. I went to school for fine art. Some of my favorite artists include John Marin, Wasily Kandinsky, John Sargent and Mark Rothko. My hobbies include painting, rock climbing, yoga, reading, hiking, and swimming. I live in Chicago with my two cats, Hawk and Radar. I work for a consulting company called Gatefeed and do freelance graphic design work in my free time.  </p>
-				<p>My friend says I come off as serious to some people but to her I'm funny. I don't try to be funny. It's hard to point out a "quirky" thing. I'm sure I have a few quirky things about me. </p>
+				<p>I was born in Torrance, CA and grew up in the suburbs of Chicago. I went to school for fine art. Some of my favorite artists include John Marin, Rene Magritte, Wasily Kandinsky, John Sargent and Mark Rothko. My hobbies include painting, rock climbing, yoga, reading, hiking, and swimming. I live in Chicago with my two cats, Hawk and Radar. I'm currently taking a course at Dev Bootcamp to learn web development. This is one of my projects. </p>
+				<p>My friend says I come off as serious to some people but to her it's funny in an unexpected way. I don't try to be funny. It's hard to point out a "quirky" thing. I'm sure I have a few quirky things about me. </p>
 			</div>
 			
 			
