--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
 	<div class="container clearfix">
 		<div class="grid_4">
-			<img src="img/monica.gif" alt="Monica Cho">
+			<a href="index.html"><img src="img/monica.gif" alt="Monica Cho"></a>
 		</div>
 		<div class="grid_8 omega">
 			<ul class="nav">
@@ -28,15 +28,22 @@
 			</ul>
 		</div>
 
+			<br>
+			<div class="grid_12">
+			</div>
+			<br>
 			
-		<div id="new-photo" class="grid_8 alpha">
+			
+		<div id="new-photo" class="grid_6 omega">
 				
 			<img src="img/cats.jpg" alt="art">
 			
 		</div>
 			
+		
+		
 			
-		<div class="grid_8">
+		<div class="grid_6">
 			<h2>Contact</h2>
 			
 			<div id="contact">
