--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 	<div class="container clearfix">
 		<div class="grid_4">
-			<img src="img/monica.gif" alt="Monica Cho">
+			<a href="index.html"><img src="img/monica.gif" alt="Monica Cho"></a>
 		</div>
 		<div class="grid_8 omega">
 			<ul class="nav">
@@ -24,21 +24,29 @@
 				<li class="last"><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
+		
+		<br>
+		<div class="grid_12">
+		</div>
+		<br>
 	
-		<div id="featured-art" class="grid_8 alpha">
+		<div id="featured-art" class="grid_6">
 	
-			<img src="img/nude.jpg" alt="Life Drawing">
+			<img src="img/nude.jpg" alt="life drawing">
 			
 		</div>
 		
-			<div class="grid_7">
+			<div class="grid_6 omega">
 				<h2>Artist </h2>
-				
 				
 			</div>
 			
+			<br>
+			<div class="grid_12">
+			</div>
+			<br>
 			
-		<div id="copyright" class="grid_12">
+		<div id="copyright" class="grid_12 omega">
 			<p>© 2014 Monica Cho. All Rights Reserved.</p>
 		</div>
 		
