added fashion updated

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 		</div>
 		<div class="grid_8 omega">
 			<ul class="nav">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="work.html">Work</a></li>
-				<li><a href="about.html">About Me</a></li>
+				<li><a href="oils.html">Oils</a></li>
+				<li><a href="mixedmedia.html">Mixed Media</a></li>
+				<li><a href="fashion.html"> Fashion</a></li>
+				<li><a href="bio.html">Bio</a></li>
+				
 				<li class="last"><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
@@ -32,7 +34,7 @@
 	
 		<div id="featured-art" class="grid_6">
 	
-			<img src="img/nude.jpg" alt="life drawing">
+			<a href="mixedmedia.html"><img src="img/nude.jpg" alt="life drawing"></a>
 			
 		</div>
 		
